--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   equatable: ^2.0.3
   flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
+  google_sign_in: ^5.4.0
 
 dev_dependencies:
   flutter_test:
